Paper over bogus assert some more (bug 732851, r=me).